# db2-til-bq

./: .gitignore  Dockerfile  Dockerfile_init  README.md  config_loader.py  config_tables.yaml  download_license.py  init.py  main.py  pyproject.toml  requirements.txt  startup.sh  test_init_load.py
.github/: dependabot.yaml
.github/workflows/: deploy-alerts.yaml  deploy.yaml  deploy_init.yaml  main.yml
.nais/: alert-config.yaml  alert.yaml  init_job.yaml  job.yaml
explore/: fetch_chunk.py  testing_av_pakker_og_annet.py
src/: bigquery_connector.py  class_table.py  config_loader.py  config_tables.py  db2_connector.py  env_handler.py  exceptions.py  fetch_chunk.py  functions.py
