[project]
name = "venteregister-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-dtypes>=1.4.3",
    "google-auth>=2.40.3",
    "google-cloud-bigquery>=3.34.0",
    "ibm-db>=3.2.6",
    "ibm-db-sa>=0.4.1",
    "pandas>=2.3.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
